Source/highgui/highgui.ads


private
   function W_Cv_Font_Qt (Name_Font  : String_C;
                          Point_Size : Integer;
                          Color      : Cv_Scalar;
                          Weight     : Cv_Font_Weight;
                          Style      : Cv_Font_Style;
                          Spacing    : Integer) return Cv_Font;

   procedure W_Cv_Add_Text (Img  : Cv_Arr_P;
                            Text : String_C;
                            Org  : Cv_Point;
                            Arg2 : Cv_Font_P);

   procedure W_Cv_Display_Overlay (Name     : String_C;
                                   Text     : String_C;
                                   Delay_Ms : Integer);

   procedure W_Cv_Display_Status_Bar (Name     : String_C;
                                      Text     : String_C;
                                      Delay_Ms : Integer);

   procedure W_Cv_Create_Opengl_Callback (Window_Name     : String_C;
                                          Callback_Opengl : Cv_Opengl_Callback;
                                          User_Data       : Cv_Void_P;
                                          Angle           : Long_Float;
                                          Zmin            : Long_Float;
                                          Zmax            : Long_Float);

   procedure W_Cv_Save_Window_Parameters (Name : String_C);

   procedure W_Cv_Load_Window_Parameters (Name : String_C);

   function W_Cv_Create_Button (Button_Name         : String_C;
                                On_Change           : Cv_Button_Callback;
                                User_Data           : Cv_Void_P;
                                Button_Type         : Cv_Button_Type;
                                Intial_Button_State : Integer) return Integer;
   --
   function W_Cv_Init_System (Argc : Integer;
                              Argv : Cv_String_Pointer) return Integer;

   function W_Cv_Named_Window (Windowname  : String_C;
                               Flags       : Highgui_Window_Params := Cv_Window_Autosize) return Integer;

   procedure W_Cv_Set_Window_Property (Name       : String_C;
                                       Prop_Id    : Highgui_Window_Params;
                                       Prop_Value : Long_Float);
   function W_Cv_Get_Window_Property (Name    : String_C;
                                      Prop_Id : Highgui_Window_Params) return Long_Float;

   procedure W_Cv_Show_Image (Windowname  : String_C;
                              Image       : Cv_Arr_P);

   procedure W_Cv_Resize_Window (Windowname   : String_C;
                                 Width        : Integer;
                                 Height       : Integer );

   procedure W_Cv_Move_Window (Windowname : String_C;
                               X          : Integer;
                               Y          : Integer);

   procedure W_Cv_Destroy_Window (Windowname : String );

   function W_Cv_Get_Window_Handle (Window_Name : String_C)
                                    return Cv_Void_P;

   function W_Cv_Create_Trackbar (Trackbar_Name : String_C;
                                  Window_Name   : String_C;
                                  Value         : access Integer;
                                  Count         : Integer;
                                  On_Change     : Cv_Trackbar_Callback) return Integer;

   function W_Cv_Create_Trackbar2 (Trackbar_Name : String_C;
                                   Window_Name   : String_C;
                                   Value         : Integer;
                                   Count         : Integer;
                                   On_Change     : Cv_Trackbar_Callback2 := null;
                                   User_Data     : Cv_Void_P) return Integer;

   -- retrieve or set trackbar position
   function W_Cv_Get_Trackbar_Pos (Trackbar_Name : String_C;
                                   Window_Name   : String_C) return Integer;

   procedure W_Cv_Set_Trackbar_Pos (Trackbar_Name : String_C;
                                    Window_Name   : String_C;
                                    Pos           : Integer);
   function W_Cv_Load_Image ( Filename : String_C; Iscolor : Integer) return Ipl_Image_P;
   function W_Cv_Load_Image_M ( Filename : String_C; Iscolor : Integer) return Cv_Mat_P;

   function W_Cv_Save_Image (Filename      : String_C;
                             Image         : Cv_Arr_P;
                             Settings      : File_Settings) return Integer;
   function W_Cv_Save_Image (Filename      : String_C;
                             Image         : Cv_Mat_P;
                             Settings      : File_Settings) return Integer;
   function W_Cv_Save_Image (Filename      : String_C;
                             Image         : Ipl_Image_P;
                             Settings      : File_Settings) return Integer;

   function W_Cv_Encode_Image (Ext    : String_C;
                               Image  : Cv_Arr_P;
                               Params : File_Settings) return Cv_Mat_P;
   function W_Cv_Encode_Image (Ext    : String_C;
                               Image  : Cv_Mat_P;
                               Params : File_Settings) return Cv_Mat_P;
   function W_Cv_Encode_Image (Ext    : String_C;
                               Image  : Ipl_Image_P;
                               Params : File_Settings) return Cv_Mat_P;

   function W_Cv_Create_File_Capture ( Name : String_C ) return Cv_Capture_P;

   function W_Cv_Create_Video_Writer (Filename       : String_C;
                                      Fourcc         : Integer;
                                      Fps            : Long_Float;
                                      Width          : Integer;
                                      Height         : Integer;
                                      Is_Color       : Integer
                                     ) return Cv_Video_Writer_P;

   pragma Import (C, W_Cv_Font_Qt, "cvFontQt");
   pragma Import (C, W_Cv_Add_Text, "cvAddText");
   pragma Import (C, W_Cv_Display_Overlay, "cvDisplayOverlay");
   pragma Import (C, W_Cv_Display_Status_Bar, "cvDisplayStatusBar");
   pragma Import (C, W_Cv_Create_Opengl_Callback, "cvCreateOpenGLCallback");
   pragma Import (C, W_Cv_Save_Window_Parameters, "cvSaveWindowParameters");
   pragma Import (C, W_Cv_Load_Window_Parameters, "cvLoadWindowParameters");
   pragma Import (C, Cv_Start_Loop, "cvStartLoop");
   pragma Import (C, Cv_Stop_Loop, "cvStopLoop");
   pragma Import (C, W_Cv_Create_Button, "cvCreateButton");
   --
   pragma Import (C, W_Cv_Init_System, "cvInitSystem");
   pragma Import (C, Cv_Start_Window_Thread, "cvStartWindowThread");
   pragma Import (C, W_Cv_Named_Window, "cvNamedWindow");
   pragma Import (C, W_Cv_Set_Window_Property, "cvSetWindowProperty");
   pragma Import (C, W_Cv_Get_Window_Property, "cvGetWindowProperty");
   pragma Import (C, W_Cv_Show_Image, "cvShowImage");
   pragma Import (C, W_Cv_Resize_Window, "cvResizeWindow");
   pragma Import (C, W_Cv_Move_Window, "cvMoveWindow");
   pragma Import (C, W_Cv_Destroy_Window, "cvDestroyWindow");
   pragma Import (C, Cv_Destroy_All_Windows, "cvDestroyAllWindows");
   pragma Import (C, W_Cv_Get_Window_Handle, "cvGetWindowHandle");
   pragma Import (C, Cv_Get_Window_Name, "cvGetWindowName");
   pragma Import (C, W_Cv_Create_Trackbar, "cvCreateTrackbar");
   pragma Import (C, W_Cv_Create_Trackbar2, "cvCreateTrackbar2");
   pragma Import (C, W_Cv_Get_Trackbar_Pos, "cvGetTrackbarPos");
   pragma Import (C, W_Cv_Set_Trackbar_Pos, "cvSetTrackbarPos");
   pragma Import (C, Cv_Set_Mouse_Callback, "cvSetMouseCallback");
   pragma Import (C, W_Cv_Load_Image, "cvLoadImage");
   pragma Import (C, W_Cv_Load_Image_M, "cvLoadImageM");
   pragma Import (C, W_Cv_Save_Image, "cvSaveImage");
   pragma Import (C, Cv_Decode_Image, "cvDecodeImage");
   pragma Import (C, Cv_Decode_Image_M, "cvDecodeImageM");
   pragma Import (C, W_Cv_Encode_Image, "cvEncodeImage");
   pragma Import (C, Cv_Convert_Image, "cvConvertImage");
   pragma Import (C, Cv_Wait_Key, "cvWaitKey");
   pragma Import (C, W_Cv_Create_File_Capture, "cvCreateFileCapture");
   pragma Import (C, Cv_Create_Camera_Capture, "cvCreateCameraCapture");
   pragma Import (C, Cv_Grab_Frame, "cvGrabFrame");
   pragma Import (C, Cv_Retrieve_Frame, "cvRetrieveFrame");
   pragma Import (C, Cv_Query_Frame, "cvQueryFrame");
   pragma Import (C, Cv_Release_Capture, "cvReleaseCapture");
   pragma Import (C, Cv_Get_Capture_Property, "cvGetCaptureProperty");
   pragma Import (C, Cv_Set_Capture_Property, "cvSetCaptureProperty");
   pragma Import (C, Cv_Get_Capture_Domain, "cvGetCaptureDomain");
   pragma Import (C, W_Cv_Create_Video_Writer, "cvCreateVideoWriter");
   pragma Import (C, Cv_Write_Frame, "cvWriteFrame");
   pragma Import (C, Cv_Release_Video_Writer, "cvReleaseVideoWriter");
end Highgui;
